find_package(buracchi-cutest CONFIG REQUIRED)

add_executable(test_server "test.c")
target_link_libraries(test_server INTERFACE coverage_config)
target_link_libraries(test_server PRIVATE buracchi::cutest::cutest buracchi::cutest::cutest_main)
target_link_libraries(test_server PRIVATE $<TARGET_OBJECTS:server_obj>)
target_link_libraries(test_server PRIVATE logger)
target_link_libraries(test_server PRIVATE network_utils)
target_link_libraries(test_server PRIVATE tftp)
target_link_libraries(test_server PRIVATE PkgConfig::liburing)
cutest_discover_tests(test_server)
